# AgenticMind

./: .gitignore  README.md
A2A-101/1/: __main__.py  agent_executor.py  requirements.txt  test_client.py
AutoBlogger/: .env.example  .gitignore  README.md  client.py  content_creation_server.py  hashnode_server.py  input_file.json  input_file.txt  logging_config.py  main.py  markdown_file_server.py  mcp_config.json  requirements.txt
AutoBlogger/configs/: configs.py  configs.yaml
AutoBlogger/content_creation/: utils.py
AutoBlogger/server_src/: hashnode_graphql_queries.py
Code_Assistant/: main.py
Code_Gen/: .gitignore  code_reader.py  requirements.txt
CrewAI-101/2/: main.py
CrewAI-101/2/0_demo/: README.md  pyproject.toml
CrewAI-101/2/0_demo/src/crew_101/: main.py
CrewAI-101/3/: tools-example.py
CrewAI-101/4/hands_on/: pyproject.toml
CrewAI-101/4/hands_on/src/hands_on/: main.py
Email_Automation/: .env.example  .gitignore  README.md
Email_Automation/src/: graph.py  nodes.py  state.py
Financial_Analyst/: financial_agent.py  playground.py
Job-Recommender/: .gitignore  README.md  app.py  mcp_server.py  pyproject.toml  requirements.txt
Job-Recommender/src/: helper.py  job_api.py
LangGraph-101/0-introduction-langchain/: 0_basics.py  1-react_agent_basic.py
LangGraph-101/0-simple-graph/: 0-simple_graph.py  1-1_job_apply.py
LangGraph-101/1-basic-calculator-agent/: agent.py  agent_tools.py
LangGraph-101/10-streaming/: stream_events.py
LangGraph-101/11-chat_api/: app.py
LangGraph-101/12-Async/: 1_async.py  2_async.py  3_async.py
(+156 files in other folders)
