[project]
name = "crew_101"
version = "0.1.0"
description = "crew-101 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
crew_101 = "crew_101.main:run"
run_crew = "crew_101.main:run"
train = "crew_101.main:train"
replay = "crew_101.main:replay"
test = "crew_101.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
